# python-sdk

./: .gitattributes  CHANGELOG.md  INSTALLATION.md  LICENSE  PERFORMANCE_GUIDE.md  PROJECT_SUMMARY.md  README.md  TECHNICAL_DOCUMENTATION.md  build.gradle  build.js  gradle.properties  mod.json  package.json  pyproject.toml  transparency.mixins.json
resources/assets/minecraft/shaders/include/: depth_utils.glsl  noise_utils.glsl
resources/assets/minecraft/shaders/post/: transparency_composite.json
resources/assets/minecraft/shaders/program/: cloud_render.fsh  cloud_render.vsh  particle_render.fsh  particle_render.vsh  transparency_composite.fsh  transparency_composite.vsh  weather_render.fsh  weather_render.vsh
src/client/: TransparencyClientMod.java  TransparencyRenderer.java  VideoSettingsScreen.java
src/client/mixin/: ParticleManagerMixin.java  WorldRendererMixin.java
src/config/: TransparencyConfig.java
src/main/: TransparencyMod.java
src/main/java/com/example/improvedtransparency/: ImprovedTransparencyMod.java
src/main/java/com/example/improvedtransparency/config/: ModConfig.java
src/main/java/com/example/improvedtransparency/mixin/: TransparencyShaderMixin.java
src/main/resources/: fabric.mod.json  improvedtransparency.mixins.json
src/main/resources/assets/improvedtransparency/shaders/program/: transparency.fsh  transparency.json  transparency.vsh
