[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-blackbox-sdk"
version = "0.1.1"
description = "Python SDK for AIR Blackbox Gateway — record, replay, and govern every AI decision"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Jason Shotwell", email = "jason.j.shotwell@gmail.com"}]
keywords = ["ai", "llm", "audit", "governance", "openai", "langchain", "crewai", "compliance", "accountability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://github.com/airblackbox/gateway"
Repository = "https://github.com/airblackbox/python-sdk"
Issues = "https://github.com/airblackbox/python-sdk/issues"
Documentation = "https://github.com/airblackbox/python-sdk#readme"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain-openai>=0.1.0"]
crewai = ["crewai>=0.1.0", "langchain-openai>=0.1.0"]
all = ["openai>=1.0.0", "langchain-openai>=0.1.0", "crewai>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]